Add mypy to linters job and correct existing errors

--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,14 @@ deps =
     -r {toxinidir}/test/requirements.txt
 commands = pytest {posargs}
 
-[testenv:linters]
+[testenv:linters{,-py39,-py310}]
 description = Run code linters
 commands =
     flake8 --version
     flake8 ansible_builder test
     yamllint --version
     yamllint -s .
+    mypy ansible_builder
 
 [testenv:unit{,-py39,-py310}]
 description = Run unit tests
