Add check for ansible-galaxy before galaxy installs

--- a/test/data/v2/complete/ee.yml
+++ b/test/data/v2/complete/ee.yml
@@ -17,6 +17,9 @@ dependencies:
   python_interpreter:
     package_name: "mypython3"
     python_path: "/usr/local/bin/mypython"
+  galaxy: |
+    collections:
+      - ansible.utils
 
 additional_build_files:
   - src: files/random.cfg
