Add option for package manager (#17)
* Add option for package manager

- Fixes bug where we incorrecty assume dnf for python interpreter install
- Add pulp tests that verify check_ansible and new pkg manager option

* Use 'upgrade' instead of 'update'

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,9 @@ commands = pytest {posargs:test/unit}
 # Some of these tests must run serially because of a shared resource
 # (the system policy.json file).
 description = Run pulp integration tests
-commands = pytest -n 1 -m "serial" {posargs:test/pulp_integration}
+commands =
+    pytest -n 1 -m "serial" {posargs:test/pulp_integration}
+    pytest -m "not serial" {posargs:test/pulp_integration}
 
 [testenv:integration{,-py39,-py310}]
 description = Run integration tests
