Change ansible_core/ansible_runner schema types

--- a/test/data/v3/check_ansible/ee-missing-ansible.yml
+++ b/test/data/v3/check_ansible/ee-missing-ansible.yml
@@ -6,7 +6,8 @@ images:
     name: localhost:8080/testrepo/ubi-minimal:latest
 
 dependencies:
-  ansible_runner: ansible_runner
+  ansible_runner:
+    package_pip: ansible-runner
   python_interpreter:
     package_name: python3
 
