--- a/test/data/v3/check_ansible/ee-missing-runner.yml
+++ b/test/data/v3/check_ansible/ee-missing-runner.yml
@@ -6,7 +6,8 @@ images:
     name: localhost:8080/testrepo/ubi-minimal:latest
 
 dependencies:
-  ansible_core: ansible_core
+  ansible_core:
+    package_pip: ansible-core
   python_interpreter:
     package_name: python3
 
