Change package_name to package_system for Python interpreter

--- a/demo/v3_demo/execution-environment.yml
+++ b/demo/v3_demo/execution-environment.yml
@@ -14,7 +14,7 @@ images:
 
 dependencies:
   python_interpreter:
-    package_name: python39
+    package_system: python39
     python_path: /usr/bin/python3.9
 
   ansible_core:
