--- a/test/data/v3/check_ansible/ee-missing-runner.yml
+++ b/test/data/v3/check_ansible/ee-missing-runner.yml
@@ -6,9 +6,10 @@ images:
     name: localhost:8080/testrepo/ubi-minimal:latest
 
 dependencies:
-  ansible_core: ansible_core
+  ansible_core:
+    package_pip: ansible-core
   python_interpreter:
-    package_name: python3
+    package_system: python3
 
 options:
   package_manager_path: /usr/bin/microdnf
