Add Python 3.11 testing

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     -r {toxinidir}/test/requirements.txt
 commands = pytest {posargs}
 
-[testenv:linters{,-py39,-py310}]
+[testenv:linters{,-py39,-py310,-py311}]
 description = Run code linters
 commands =
     flake8 --version
@@ -18,11 +18,11 @@ commands =
     yamllint -s .
     mypy ansible_builder
 
-[testenv:unit{,-py39,-py310}]
+[testenv:unit{,-py39,-py310,-py311}]
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
-[testenv:pulp-integration{,-py310}]
+[testenv:pulp-integration{-py39,-py310,-py311}]
 # Some of these tests must run serially because of a shared resource
 # (the system policy.json file).
 description = Run pulp integration tests
@@ -30,7 +30,7 @@ commands =
     pytest -n 1 -m "serial" {posargs:test/pulp_integration}
     pytest -m "not serial" {posargs:test/pulp_integration}
 
-[testenv:integration{,-py39,-py310}]
+[testenv:integration{,-py39,-py310,-py311}]
 description = Run integration tests
 # rootless podman reads $HOME
 passenv =
