Update CI testing

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     -r {toxinidir}/test/requirements.txt
 commands = pytest {posargs}
 
-[testenv:linters]
+[testenv:linters{,-py38,-py39,-py310}]
 description = Run code linters
 commands =
     flake8 --version
