Add support for Package manager options
* added support for providing additional package manager options

Fixes: #418

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/test/data/v3/complete/ee.yml
+++ b/test/data/v3/complete/ee.yml
@@ -5,6 +5,9 @@ images:
   base_image:
     name: registry.redhat.io/ansible-automation-platform-21/ee-minimal-rhel8:latest
 
+options:
+  package_manager_options: '--nodocs'
+
 build_arg_defaults:
   ANSIBLE_GALAXY_CLI_COLLECTION_OPTS: '--foo'
   ANSIBLE_GALAXY_CLI_ROLE_OPTS: '--bar'
