switch to setuptools_scm

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,8 @@ summary = "A tool for building Ansible Execution Environments"
 home_page = https://ansible-builder.readthedocs.io
 description_file = README.md
 description_content_type = text/markdown
-license_file = LICENSE.md
+license_files =
+    LICENSE.md
 license = Apache Software License, Version 2.0
 classifiers =
     Development Status :: 5 - Production/Stable
@@ -30,15 +31,21 @@ classifiers =
 ignore=W503
 max-line-length=160
 
-[entry_points]
+[options]
+include_package_data = true
+install_requires =
+    PyYAML
+    requirements_parser
+    bindep
+    jsonschema
+
+[options.package_data]
+ansible_builder.target_scripts =
+    *
+
+python_requires = >=3.9
+
+
+[options.entry_points]
 console_scripts =
-    ansible-builder = ansible_builder.cli:run
-
-[files]
-packages =
-    ansible_builder
-
-[pbr]
-skip_changelog = yes
-skip_authors = yes
-skip_reno = yes
+  ansible-builder = ansible_builder.cli:run
