update tox configs for moved package source root

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,10 @@ commands = pytest {posargs}
 description = Run code linters
 commands =
     flake8 --version
-    flake8 ansible_builder test
+    flake8 src/ansible_builder test
     yamllint --version
     yamllint -s .
-    mypy ansible_builder
+    mypy src/ansible_builder
 
 [testenv:unit{,-py39,-py310,-py311}]
 description = Run unit tests
