--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # this is not ideal, but we need tags available to generate versions in tests
 
       - name: Install Python ${{ matrix.py_version.name }}
         uses: actions/setup-python@v4
