--- a/test/data/pip/execution-environment.yml
+++ b/test/data/pip/execution-environment.yml
@@ -1,4 +1,19 @@
 ---
-version: 1
+version: 3
+
+images:
+  base_image:
+    name: centos:stream9
+
+additional_build_steps:
+  prepend_base:
+  - RUN /usr/libexec/platform-python -m ensurepip
+
 dependencies:
+  python_interpreter:
+    python_path: '/usr/libexec/platform-python'
   python: project/requirements.txt
+
+options:
+  package_manager_path: '/bin/true'
+  skip_ansible_check: yes
