--- a/test/data/pytz/execution-environment.yml
+++ b/test/data/pytz/execution-environment.yml
@@ -1,4 +1,22 @@
 ---
-version: 1
+version: 3
+
+images:
+  base_image:
+    name: centos:stream9
+
+additional_build_steps:
+  prepend_base:
+  - RUN /usr/libexec/platform-python -m ensurepip
+
 dependencies:
+  ansible_core:
+    package_pip: ansible-core<2.15
+  ansible_runner:
+    package_pip: ansible-runner<2.3
   galaxy: requirements.yml
+  python_interpreter:
+    python_path: '/usr/libexec/platform-python'
+
+options:
+  package_manager_path: '/bin/true'  # provide a no-op package manager override for the cases where we just don't care
