--- a/test/data/minimal_fast/execution-environment.yml
+++ b/test/data/minimal_fast/execution-environment.yml
@@ -7,7 +7,7 @@ additional_build_steps:
 
 images:
   base_image:
-    name: centos:stream9
+    name: quay.io/centos/centos:stream9
 
 dependencies:
   python_interpreter:
