--- a/test/data/pip/execution-environment.yml
+++ b/test/data/pip/execution-environment.yml
@@ -3,7 +3,7 @@ version: 3
 
 images:
   base_image:
-    name: centos:stream9
+    name: quay.io/centos/centos:stream9
 
 additional_build_steps:
   prepend_base:
