--- a/test/data/subversion/execution-environment.yml
+++ b/test/data/subversion/execution-environment.yml
@@ -2,7 +2,7 @@ version: 3
 
 images:
   base_image:
-    name: centos:stream9
+    name: quay.io/centos/centos:stream9
 
 dependencies:
   python_interpreter:
