add/enforce custom `destructive` mark and enforce `serial`
* adds a new pytest CLI option `--run-destructive`; tests marked `destructive` will skip when run without this option 
* enforces `serial` marking, skips any test so-marked if `numprocesses` is present and not 0 (we can't see `1` with xdist)
* tox will run both integration and pulp-integration tests with non-serial followed by serial
* CI defaults to adding `--run-destructive` on integration/pulp-integration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Run pulp integration tests
         run: |
-          tox
+          tox -- --run-destructive
 
 
   integration:
@@ -144,9 +144,9 @@ jobs:
         run: |
           tox --notest
 
-      - name: Run integration tests
+      - name: Run integration tests (including destructive)
         run: |
-          tox
+          tox -- --run-destructive
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
