--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     run_command: tests that use the run_command utility which runs a subprocess
     test_all_runtimes: Generate a test for each supported container runtime
     serial: Tests that need to run serially
+    destructive: Tests that may potentially be destructive to the host (skipped by default without `--run-destructive`)
 testpaths = test
 addopts =
     -r a
@@ -17,4 +18,3 @@ addopts =
     --cov-report html
     --cov-report term
     --cov-report xml
-
