--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,8 @@ commands = pytest {posargs:test/unit}
 # (the system policy.json file).
 description = Run pulp integration tests
 commands =
-    pytest -n 1 -m "serial" {posargs:test/pulp_integration}
-    pytest -m "not serial" {posargs:test/pulp_integration}
+    pytest -n 0 -m "serial" test/pulp_integration {posargs}
+    pytest -m "not serial" test/pulp_integration {posargs}
 
 [testenv:integration{,-py39,-py310,-py311}]
 description = Run integration tests
@@ -36,7 +36,9 @@ description = Run integration tests
 passenv =
     HOME
     KEEP_IMAGES
-commands = pytest {posargs:test/integration}
+commands =
+    pytest -m "not serial" test/integration {posargs}
+    pytest -n 0 -m "serial" test/integration {posargs}
 
 [testenv:docs]
 description = Build documentation
