Faster integration tests (#495)
* speed up slowest integration tests
* use some builder v3 shortcuts to bypass slow/repetitive work that's not applicable to what we're testing
* also got rid of a bunch of xfails for things that should now test reliably under both podman and docker
* update gitignore for build contexts in test data
* FQ centos image ref for docker
* add/enforce custom `destructive` mark and enforce `serial`
* adds a new pytest CLI option `--run-destructive`; tests marked `destructive` will skip when run without this option 
* enforces `serial` marking, skips any test so-marked if `numprocesses` is present and not 0 (we can't see `1` with xdist)
* tox will run both integration and pulp-integration tests with non-serial followed by serial
* CI defaults to adding `--run-destructive` on integration/pulp-integration

--- a/test/data/subversion/execution-environment.yml
+++ b/test/data/subversion/execution-environment.yml
@@ -1,4 +1,13 @@
----
-version: 1
+version: 3
+
+images:
+  base_image:
+    name: quay.io/centos/centos:stream9
+
 dependencies:
+  python_interpreter:
+    python_path: '/usr/libexec/platform-python'
   system: bindep.txt
+
+options:
+  skip_ansible_check: yes
