--- a/test/data/minimal_fast/execution-environment.yml
+++ b/test/data/minimal_fast/execution-environment.yml
@@ -1,18 +1,17 @@
----
 version: 3
+
+additional_build_steps:
+  prepend_base:
+  # a quick value we can check for cached output
+  - RUN echo "$(echo hi) $(echo mom)"
 
 images:
   base_image:
     name: quay.io/centos/centos:stream9
 
-additional_build_steps:
-  prepend_base:
-  - RUN /usr/libexec/platform-python -m ensurepip
-
 dependencies:
   python_interpreter:
     python_path: '/usr/libexec/platform-python'
-  python: project/requirements.txt
 
 options:
   package_manager_path: '/bin/true'
