remove forced OS package manager upgrade
* enable build cache for most tests
* build arg to preserve pkgmgr cache

--- a/test/data/build_args/base-image.yml
+++ b/test/data/build_args/base-image.yml
@@ -1,5 +1,19 @@
 ---
+version: 3
+
+images:
+  base_image:
+    name: quay.io/centos/centos:stream9
+
+dependencies:
+  python_interpreter:
+    python_path: '/usr/libexec/platform-python'
+
+options:
+  package_manager_path: '/bin/true'
+  skip_ansible_check: yes
+
 additional_build_steps:
-  prepend:
+  prepend_base:
     - ARG EE_BASE_IMAGE
     - RUN echo $EE_BASE_IMAGE > /base_image
