--- a/test/data/ansible.posix.at/execution-environment.yml
+++ b/test/data/ansible.posix.at/execution-environment.yml
@@ -1,4 +1,17 @@
 ---
-version: 1
+version: 3
+
+images:
+  base_image:
+    name: quay.io/centos/centos:stream9
+
+additional_build_steps:
+  prepend_base:
+  - RUN /usr/libexec/platform-python -m ensurepip
+  - RUN /usr/libexec/platform-python -m pip install ansible-core ansible-runner
+  - RUN dnf install git -y
+
 dependencies:
+  python_interpreter:
+    python_path: '/usr/libexec/platform-python'
   galaxy: requirements.yml
