--- a/test/data/build_fail/execution-environment.yml
+++ b/test/data/build_fail/execution-environment.yml
@@ -1,5 +1,10 @@
----
-version: 1
+version: 3
+
 additional_build_steps:
-  prepend:
-    - RUN thisisnotacommand
+  prepend_base:
+  # a quick value we can check for cached output
+  - RUN thisisnotacommand
+
+images:
+  base_image:
+    name: quay.io/centos/centos:stream9
