--- a/test/data/prepend_steps/execution-environment.yml
+++ b/test/data/prepend_steps/execution-environment.yml
@@ -1,5 +1,14 @@
 ---
-version: 1
+version: 3
+
+images:
+  base_image:
+    name: quay.io/centos/centos:stream9
+
 additional_build_steps:
-  prepend: |
-    RUN whoami
+  prepend_base: |
+    RUN echo "hello from prepend_base" > /baseout.txt
+
+options:
+  package_manager_path: '/bin/true'
+  skip_ansible_check: yes
