support blind-translated YAML mapping for galaxy deps
* simplify docs accordingly

--- a/test/data/v3/complete/ee.yml
+++ b/test/data/v3/complete/ee.yml
@@ -17,9 +17,12 @@ dependencies:
   python_interpreter:
     package_system: "mypython3"
     python_path: "/usr/local/bin/mypython"
-  galaxy: |
+  galaxy:
     collections:
       - ansible.utils
+    roles:
+      - blar
+      - blar2
   python:
     - six
     - PyYaml==6.0
