Allow to set user value for the container image (#521)
* Allow to set user value for the container image

* Added options.user setting
* Updated documentation with an example
* Added unit tests

Fixes: #506

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

* Updated indentation

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

* review comments

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

* Fix integration tests

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

---------

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/demo/execution-environment.yml
+++ b/demo/execution-environment.yml
@@ -8,6 +8,9 @@ images:
     # name: registry.fedoraproject.org/fedora:38  # vanilla image!
     # name: registry.access.redhat.com/ubi9/ubi:latest  # vanilla image!
 
+options:
+  user: '1000'  # (optional) sets the username or UID
+
 dependencies:
   python_interpreter:
     package_system: python39  # (optional) name of a Python interpreter OS package to install
