--- a/test/data/v3/complete/ee.yml
+++ b/test/data/v3/complete/ee.yml
@@ -9,6 +9,9 @@ build_arg_defaults:
   ANSIBLE_GALAXY_CLI_COLLECTION_OPTS: '--foo'
   ANSIBLE_GALAXY_CLI_ROLE_OPTS: '--bar'
 
+options:
+  user: '1001'
+
 dependencies:
   ansible_core:
     package_pip: ansible-core==2.13
