--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ python_requires = >=3.9
 
 
 [options.package_data]
-ansible_builder.target_scripts =
+ansible_builder._target_scripts =
     *
 
 [options.entry_points]
