--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,15 +23,15 @@ repos:
     hooks:
       - id: remove-tabs
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.6
-    hooks:
-      - id: prettier
-        always_run: true
-        additional_dependencies:
-          - prettier
-          - prettier-plugin-toml
-          - prettier-plugin-sort-json
+  # - repo: https://github.com/pre-commit/mirrors-prettier
+  #   rev: v3.0.0-alpha.6
+  #   hooks:
+  #     - id: prettier
+  #       always_run: true
+  #       additional_dependencies:
+  #         - prettier
+  #         - prettier-plugin-toml
+  #         - prettier-plugin-sort-json
 
   - repo: https://github.com/psf/black
     rev: 23.3.0
