--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,7 @@
 requires = ["setuptools>=45, <=67.7.2", "setuptools-scm[toml]>=6.2, <=7.1.0"]  # pin max versions of build deps and update as needed
 build-backend = "setuptools.build_meta"
 
+[tool.black]
+line-length = 100
+
 [tool.setuptools_scm]
