Switch pbr setup.cfg metadata to setuptools metadata. Fixes #532

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,10 @@
 name = ansible-builder
 author = Ansible, Inc.
 author_email = info@ansible.com
-summary = "A tool for building Ansible Execution Environments"
-home_page = https://ansible-builder.readthedocs.io
-description_file = README.md
-description_content_type = text/markdown
+description = "A tool for building Ansible Execution Environments"
+url = https://ansible-builder.readthedocs.io
+long_description = file: README.md
+long_description_content_type = text/markdown
 license_files =
     LICENSE.md
 license = Apache Software License, Version 2.0
