Fail CI on codecov upload failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,8 @@ jobs:
         with:
           files: test/coverage/reports/coverage.xml
           flags: ${{ matrix.py_version.tox_env }}
+          fail_ci_if_error: true
+          verbose: true
 
   unit:
     name: Unit - ${{ matrix.py_version.name}}
@@ -198,3 +200,5 @@ jobs:
         with:
           files: test/coverage/reports/coverage.xml
           flags: ${{ matrix.py_version.tox_env }}
+          fail_ci_if_error: true
+          verbose: true
