--- a/demo/execution-environment.yml
+++ b/demo/execution-environment.yml
@@ -10,6 +10,7 @@ images:
 
 options:
   user: '1000'  # (optional) sets the username or UID
+  # tags: 'ee_development:latest' # (optional) sets tags
 
 dependencies:
   python_interpreter:
