Update code sanity
* Enable (C0206) consider-using-dict-items
* Enable (C0209) consider-using-f-string
* Enable (R0402) consider-using-from-import
* Enable (R1705) no-else-return
* Enable (R1725) super-with-arguments
* Enable (R1735) use-dict-literal
* Enable (W0102) dangerous-default-value
* Enable (W0707) raise-missing-from
* Enable (W1203) logging-fstring-interpolation

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,22 @@ disable = [
   # Some codes we will leave disabled
   "C0103",  # invalid-name
   "C0114",  # missing-module-docstring
+  "C0115",  # missing-class-docstring
   "C0116",  # missing-function-docstring
+
   "R0902",  # too-many-instance-attributes
 ]
 
 enable = [
+  "C0206",  # consider-using-dict-items
+  "C0209",  # consider-using-f-string
+
+  "R0402",  # consider-using-from-import
+  "R1705",  # no-else-return
+  "R1725",  # super-with-arguments
+  "R1735",  # use-dict-literal
+
   "W0102",  # dangerous-default-value
+  "W1203",  # logging-fstring-interpolation
+
 ]
