--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,18 +17,25 @@ disable = [
   "C0116",  # missing-function-docstring
 
   "R0902",  # too-many-instance-attributes
+
+  "W1514",  # unspecified-encoding
 ]
 
 enable = [
   "C0206",  # consider-using-dict-items
   "C0209",  # consider-using-f-string
+  "C0411",  # wrong-import-order
 
+  "E1101",  # no-member
+
+  "R0205",  # useless-object-inheritance
   "R0402",  # consider-using-from-import
   "R1705",  # no-else-return
   "R1725",  # super-with-arguments
   "R1735",  # use-dict-literal
 
   "W0102",  # dangerous-default-value
+  "W0707",  # raise-missing-from
   "W1203",  # logging-fstring-interpolation
 
 ]
