--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
     yamllint --version
     yamllint -s .
     mypy src/ansible_builder
-    pylint src/ansible_builder
+    pylint src/ansible_builder test
 
 [testenv:unit{,-py39,-py310,-py311}]
 description = Run unit tests
