--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ enable = [
   "R1735",  # use-dict-literal
 
   "W0102",  # dangerous-default-value
+  "W0212",  # protected-access
   "W0707",  # raise-missing-from
   "W1203",  # logging-fstring-interpolation
 
