--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,6 @@ build-backend = "setuptools.build_meta"
 output-format = "colorized"
 max-line-length=120
 disable = [
-  "all",
-
   # Some codes we will leave disabled
   "C0103",  # invalid-name
   "C0114",  # missing-module-docstring
@@ -25,34 +23,10 @@ disable = [
   "R0913",  # too-many-arguments
   "R0914",  # too-many-locals
   "R0915",  # too-many-statements
+  "R1702",  # too-many-nested-blocks
 
+  "W0511",  # fixme
   "W1514",  # unspecified-encoding
-]
-
-enable = [
-  "C0206",  # consider-using-dict-items
-  "C0209",  # consider-using-f-string
-  "C0411",  # wrong-import-order
-
-  "E1101",  # no-member
-
-  "R0205",  # useless-object-inheritance
-  "R0402",  # consider-using-from-import
-  "R1701",  # consider-merging-isinstance
-  "R1704",  # redefined-argument-from-local
-  "R1705",  # no-else-return
-  "R1710",  # inconsistent-return-statements
-  "R1720",  # no-else-raise
-  "R1724",  # no-else-continue
-  "R1725",  # super-with-arguments
-  "R1729",  # use-a-generator
-  "R1735",  # use-dict-literal
-  "R1730",  # consider-using-min-builtin
-  "R1732",  # consider-using-with
-
-  "W0102",  # dangerous-default-value
-  "W0212",  # protected-access
-  "W0707",  # raise-missing-from
-  "W1203",  # logging-fstring-interpolation
-
+  "W0718",  # broad-exception-caught
+  "W0719",  # broad-exception-raised
 ]
