--- a/docs/scenario_guides/galaxy_ee.yml
+++ b/docs/scenario_guides/galaxy_ee.yml
@@ -18,16 +18,10 @@ dependencies:
     collections:
       - ansible.utils
 
-additional_build_files:
-  # copy arbitrary files next to this EE def into the build context- we can refer to them later.
-  - src: files
-    dest: configs
-
 additional_build_steps:
   prepend_galaxy:
-    # Copy ansible.cfg from build directory to EE
-    - COPY _build/configs/ansible.cfg /etc/ansible/ansible.cfg
     # Environment variables used for Galaxy client configurations
+    - ENV ANSIBLE_GALAXY_SERVER_LIST=automation_hub
     - ENV ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_URL=https://console.redhat.com/api/automation-hub/content/xxxxxxx-synclist/
     - ENV ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_AUTH_URL=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
     # define a custom build arg env passthru - we still also have to pass
