Drop requirements-parser in favor of pep508

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ max-line-length=160
 include_package_data = true
 install_requires =
     PyYAML
-    requirements_parser
+    packaging
     bindep
     jsonschema
 python_requires = >=3.9
