--- a/test/data/ansible_collections/test/reqfile/requirements.txt
+++ b/test/data/ansible_collections/test/reqfile/requirements.txt
@@ -1,4 +1,5 @@
 pytz
 python-dateutil>=2.8.2    # intentional dash
 jinja2>=3.0    # intentional lowercase
--r extra_req.txt
+tacacs_plus
+pyvcloud>=18.0.10  # duplicate with test.metadata collection
