--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ max-line-length=160
 include_package_data = true
 install_requires =
     PyYAML
-    requirements_parser
+    packaging
     bindep
     jsonschema
     setuptools; python_version >= "3.12"
