--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,6 +124,9 @@ jobs:
           - name: '3.11'
             tox_env: integration-py311
 
+          - name: '3.12'
+            tox_env: integration-py312
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -172,6 +175,9 @@ jobs:
 
           - name: '3.11'
             tox_env: unit-py311
+
+          - name: '3.12'
+            tox_env: unit-py312
 
     steps:
       - name: Checkout
