--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     -r {toxinidir}/test/requirements.txt
 commands = pytest -n auto {posargs}
 
-[testenv:linters{,-py39,-py310,-py311}]
+[testenv:linters{,-py39,-py310,-py311,-py312}]
 description = Run code linters
 commands =
     flake8 --version
@@ -22,11 +22,11 @@ commands =
     mypy src/ansible_builder
     pylint src/ansible_builder test
 
-[testenv:unit{,-py39,-py310,-py311}]
+[testenv:unit{,-py39,-py310,-py311,-py312}]
 description = Run unit tests
 commands = pytest -n auto test/unit {posargs} {[shared]pytest_cov_args}
 
-[testenv:pulp-integration{-py39,-py310,-py311}]
+[testenv:pulp-integration{-py39,-py310,-py311,-py312}]
 # Some of these tests must run serially because of a shared resource
 # (the system policy.json file).
 description = Run pulp integration tests
@@ -34,7 +34,7 @@ commands =
     pytest -n auto -m "not serial" test/pulp_integration {posargs} {[shared]pytest_cov_args}
     pytest -n 0 -m "serial" test/pulp_integration {posargs} {[shared]pytest_cov_args}
 
-[testenv:integration{,-py39,-py310,-py311}]
+[testenv:integration{,-py39,-py310,-py311,-py312}]
 description = Run integration tests
 # rootless podman reads $HOME
 passenv =
