--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3 :: Only
     Topic :: Software Development :: Build Tools
     Topic :: System :: Systems Administration
@@ -38,6 +39,7 @@ install_requires =
     requirements_parser
     bindep
     jsonschema
+    setuptools; python_version >= "3.12"
 python_requires = >=3.9
 
 
